--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=sqlite:///./fruit_platform.db
+DATABASE_URL=sqlite:///./app/fruit_platform.db
 SECRET_KEY=your-secret-key-change-this-in-production
 ENVIRONMENT=development
